# llm-backend-proxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  ruff.toml
app/: main.py
app/adapters/: __init__.py  chat_client.py  clock.py  http_client.py  network_requests.py  proz_client.py  repository.py  security_service.py  token_service.py  transport_errors.py
app/api/dependencies/: __init__.py  ai_models.py  providers.py
app/api/v1/: auth.py  chat.py
app/domain/: errors.py  models.py  ports.py
app/domain/use_cases/: __init__.py  exchange_token.py  refresh_token.py  stream_chat_response.py
app/infrastructure/: config.py  errors.py
db/: migrate.py
db/migrations/: 0001.create-tables.sql
db/sql/: insert_chat_details.sql  select_proz_status.sql  select_token_owner.sql  select_user_id.sql  update_session.sql  upsert_app_token.sql  upsert_proz_user.sql
tests/domain/: test_errors.py
tests/domain/use_cases/: conftest.py  test_exchange_token.py  test_refresh_token.py  test_stream_chat_response.py
